pycaliper/frontend/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    LineComment

Grammar

Rule 0     S' -> caliper_declarations
Rule 1     empty -> <empty>
Rule 2     expr_list_p -> expression
Rule 3     expr_list_p -> expression Comma expr_list_p
Rule 4     expr_list -> empty
Rule 5     expr_list -> expr_list_p
Rule 6     primary1_list_p -> primary1
Rule 7     primary1_list_p -> primary1 Comma primary1_list_p
Rule 8     caliper_statement_list_p -> caliper_statement
Rule 9     caliper_statement_list_p -> caliper_statement caliper_statement_list_p
Rule 10    caliper_statement_list -> empty
Rule 11    caliper_statement_list -> caliper_statement_list_p
Rule 12    caliper_mod_stmt_list -> caliper_mod_stmt
Rule 13    caliper_mod_stmt_list -> caliper_mod_stmt caliper_mod_stmt_list
Rule 14    PlusColon -> Plus Colon
Rule 15    MinusColon -> Minus Colon
Rule 16    Power -> Star Star
Rule 17    Equality -> Equals Equals
Rule 18    Inequality -> Not Equals
Rule 19    CaseEquality -> Equals Equals Equals
Rule 20    CaseInequality -> Not Equals Equals
Rule 21    WildcardEquality -> Equals Equals Question
Rule 22    WildcardInequality -> Not Equals Question
Rule 23    LessThanEqual -> LessThan Equals
Rule 24    GreaterThanEqual -> GreaterThan Equals
Rule 25    LogicalAnd -> Amp Amp
Rule 26    LogicalOr -> Bar Bar
Rule 27    BinaryXnor -> Tilde Carat
Rule 28    BinaryXnor -> Carat Tilde
Rule 29    BinaryNand -> Tilde Amp
Rule 30    BinaryNand -> Amp Tilde
Rule 31    BinaryNor -> Tilde Bar
Rule 32    BinaryNor -> Bar Tilde
Rule 33    LogicalImplication -> Minus GreaterThan
Rule 34    LogicalEquivalence -> LessThan Minus GreaterThan
Rule 35    LogicalShiftLeft -> LessThan LessThan
Rule 36    LogicalShiftRight -> GreaterThan GreaterThan
Rule 37    ArithmeticShiftLeft -> LessThan LessThan LessThan
Rule 38    ArithmeticShiftRight -> GreaterThan GreaterThan GreaterThan
Rule 39    expression -> expression1
Rule 40    expression1 -> expression2
Rule 41    expression1 -> expression2 LogicalImplication expression1
Rule 42    expression1 -> expression2 LogicalEquivalence expression1
Rule 43    expression2 -> expression3
Rule 44    expression2 -> expression3 Question expression Colon expression2
Rule 45    expression3 -> expression4
Rule 46    expression3 -> expression3 LogicalOr expression4
Rule 47    expression3 -> expression3 LogicalAnd expression4
Rule 48    expression3 -> expression3 Bar expression4
Rule 49    expression3 -> expression3 Carat expression4
Rule 50    expression3 -> expression3 BinaryXnor expression4
Rule 51    expression3 -> expression3 Amp expression4
Rule 52    expression3 -> expression3 Equality expression4
Rule 53    expression3 -> expression3 Inequality expression4
Rule 54    expression3 -> expression3 CaseEquality expression4
Rule 55    expression3 -> expression3 CaseInequality expression4
Rule 56    expression3 -> expression3 WildcardEquality expression4
Rule 57    expression3 -> expression3 WildcardInequality expression4
Rule 58    expression4 -> expression5
Rule 59    expression4 -> expression4 LessThan expression5
Rule 60    expression4 -> expression4 LessThanEqual expression5
Rule 61    expression4 -> expression4 GreaterThan expression5
Rule 62    expression4 -> expression4 GreaterThanEqual expression5
Rule 63    expression5 -> expression6
Rule 64    expression5 -> expression5 LogicalShiftRight expression6
Rule 65    expression5 -> expression5 LogicalShiftLeft expression6
Rule 66    expression5 -> expression5 ArithmeticShiftRight expression6
Rule 67    expression5 -> expression5 ArithmeticShiftLeft expression6
Rule 68    expression6 -> expression7
Rule 69    expression6 -> expression6 Plus expression7
Rule 70    expression6 -> expression6 Minus expression7
Rule 71    expression7 -> expression8
Rule 72    expression7 -> expression7 Star expression8
Rule 73    expression7 -> expression7 Divide expression8
Rule 74    expression7 -> expression7 Mod expression8
Rule 75    expression7 -> expression7 Power expression8
Rule 76    expression8 -> primary
Rule 77    expression8 -> Plus primary
Rule 78    expression8 -> Minus primary
Rule 79    expression8 -> Amp primary
Rule 80    expression8 -> BinaryNand primary
Rule 81    expression8 -> Bar primary
Rule 82    expression8 -> BinaryNor primary
Rule 83    expression8 -> Carat primary
Rule 84    expression8 -> BinaryXnor primary
Rule 85    expression8 -> Not primary
Rule 86    expression8 -> Tilde primary
Rule 87    part_select_range -> expression Colon expression
Rule 88    part_select_range -> expression PlusColon expression
Rule 89    part_select_range -> expression MinusColon expression
Rule 90    number -> Num
Rule 91    identifier -> Ident
Rule 92    primary1 -> identifier
Rule 93    primary1 -> KW_this
Rule 94    primary1 -> primary1 Dot identifier
Rule 95    primary1 -> primary1 BracketL expression BracketR
Rule 96    primary1 -> primary1 BracketL part_select_range BracketR
Rule 97    function_call -> identifier ParenL expr_list ParenR
Rule 98    primary -> number
Rule 99    primary -> primary1
Rule 100   primary -> function_call
Rule 101   primary -> ParenL expression ParenR
Rule 102   basetype -> KW_logic
Rule 103   basetype -> identifier ParenL expr_list ParenR
Rule 104   basetype -> identifier
Rule 105   dimension -> BracketL expression BracketR
Rule 106   dimension -> BracketL expression Colon expression BracketR
Rule 107   datatype -> basetype
Rule 108   datatype -> datatype dimension
Rule 109   caliper_loop -> identifier LessThan expression
Rule 110   caliper_loop_list_p -> caliper_loop
Rule 111   caliper_loop_list_p -> caliper_loop_list_p Comma caliper_loop
Rule 112   caliper_statement -> KW_def expr_list_p Semi
Rule 113   caliper_statement -> KW_invariant identifier Colon expression Semi
Rule 114   caliper_statement -> datatype primary1_list_p Semi
Rule 115   caliper_statement -> KW_begin caliper_statement_list KW_end
Rule 116   caliper_statement -> KW_if ParenL expression ParenR caliper_statement
Rule 117   caliper_statement -> KW_foreach ParenL caliper_loop_list_p ParenR caliper_statement
Rule 118   caliper_mod_stmt -> KW_input caliper_statement
Rule 119   caliper_mod_stmt -> KW_output caliper_statement
Rule 120   caliper_mod_stmt -> KW_state caliper_statement
Rule 121   caliper_mod_stmt -> KW_output KW_state caliper_statement
Rule 122   caliper_mod_stmt -> KW_begin caliper_mod_stmt_list KW_end
Rule 123   caliper_mod_stmt -> KW_if ParenL expression ParenR caliper_mod_stmt
Rule 124   caliper_mod_stmt -> KW_def expr_list_p Semi
Rule 125   caliper_mod_stmt -> KW_invariant identifier Colon expression Semi
Rule 126   caliper_mod_stmt -> datatype primary1_list_p Semi
Rule 127   caliper_mod_stmt -> KW_submodule identifier ParenL expr_list ParenR identifier Semi
Rule 128   caliper_declaration -> KW_spec identifier ParenL expr_list ParenR Semi caliper_statement_list KW_endspec
Rule 129   caliper_declaration -> KW_struct identifier ParenL expr_list ParenR Semi caliper_statement_list KW_endstruct
Rule 130   caliper_declaration -> KW_module identifier ParenL expr_list ParenR Semi caliper_mod_stmt_list KW_endmodule
Rule 131   caliper_declaration -> KW_parameter identifier Semi
Rule 132   caliper_declarations -> empty
Rule 133   caliper_declarations -> caliper_declaration caliper_declarations

Terminals, with rules where they appear

Amp                  : 25 25 29 30 51 79
Bar                  : 26 26 31 32 48 81
BracketL             : 95 96 105 106
BracketR             : 95 96 105 106
Carat                : 27 28 49 83
Colon                : 14 15 44 87 106 113 125
Comma                : 3 7 111
Divide               : 73
Dot                  : 94
Equals               : 17 17 18 19 19 19 20 20 21 21 22 23 24
GreaterThan          : 24 33 34 36 36 38 38 38 61
Ident                : 91
KW_begin             : 115 122
KW_def               : 112 124
KW_end               : 115 122
KW_endmodule         : 130
KW_endspec           : 128
KW_endstruct         : 129
KW_foreach           : 117
KW_if                : 116 123
KW_input             : 118
KW_invariant         : 113 125
KW_logic             : 102
KW_module            : 130
KW_output            : 119 121
KW_parameter         : 131
KW_spec              : 128
KW_state             : 120 121
KW_struct            : 129
KW_submodule         : 127
KW_this              : 93
LessThan             : 23 34 35 35 37 37 37 59 109
LineComment          : 
Minus                : 15 33 34 70 78
Mod                  : 74
Not                  : 18 20 22 85
Num                  : 90
ParenL               : 97 101 103 116 117 123 127 128 129 130
ParenR               : 97 101 103 116 117 123 127 128 129 130
Plus                 : 14 69 77
Question             : 21 22 44
Semi                 : 112 113 114 124 125 126 127 128 129 130 131
Star                 : 16 16 72
Tilde                : 27 28 29 30 31 32 86
error                : 

Nonterminals, with rules where they appear

ArithmeticShiftLeft  : 67
ArithmeticShiftRight : 66
BinaryNand           : 80
BinaryNor            : 82
BinaryXnor           : 50 84
CaseEquality         : 54
CaseInequality       : 55
Equality             : 52
GreaterThanEqual     : 62
Inequality           : 53
LessThanEqual        : 60
LogicalAnd           : 47
LogicalEquivalence   : 42
LogicalImplication   : 41
LogicalOr            : 46
LogicalShiftLeft     : 65
LogicalShiftRight    : 64
MinusColon           : 89
PlusColon            : 88
Power                : 75
WildcardEquality     : 56
WildcardInequality   : 57
basetype             : 107
caliper_declaration  : 133
caliper_declarations : 133 0
caliper_loop         : 110 111
caliper_loop_list_p  : 111 117
caliper_mod_stmt     : 12 13 123
caliper_mod_stmt_list : 13 122 130
caliper_statement    : 8 9 116 117 118 119 120 121
caliper_statement_list : 115 128 129
caliper_statement_list_p : 9 11
datatype             : 108 114 126
dimension            : 108
empty                : 4 10 132
expr_list            : 97 103 127 128 129 130
expr_list_p          : 3 5 112 124
expression           : 2 3 44 87 87 88 88 89 89 95 101 105 106 106 109 113 116 123 125
expression1          : 39 41 42
expression2          : 40 41 42 44
expression3          : 43 44 46 47 48 49 50 51 52 53 54 55 56 57
expression4          : 45 46 47 48 49 50 51 52 53 54 55 56 57 59 60 61 62
expression5          : 58 59 60 61 62 64 65 66 67
expression6          : 63 64 65 66 67 69 70
expression7          : 68 69 70 72 73 74 75
expression8          : 71 72 73 74 75
function_call        : 100
identifier           : 92 94 97 103 104 109 113 125 127 127 128 129 130 131
number               : 98
part_select_range    : 96
primary              : 76 77 78 79 80 81 82 83 84 85 86
primary1             : 6 7 94 95 96 99
primary1_list_p      : 7 114 126

Parsing method: LALR

state 0

    (0) S' -> . caliper_declarations
    (132) caliper_declarations -> . empty
    (133) caliper_declarations -> . caliper_declaration caliper_declarations
    (1) empty -> .
    (128) caliper_declaration -> . KW_spec identifier ParenL expr_list ParenR Semi caliper_statement_list KW_endspec
    (129) caliper_declaration -> . KW_struct identifier ParenL expr_list ParenR Semi caliper_statement_list KW_endstruct
    (130) caliper_declaration -> . KW_module identifier ParenL expr_list ParenR Semi caliper_mod_stmt_list KW_endmodule
    (131) caliper_declaration -> . KW_parameter identifier Semi

    $end            reduce using rule 1 (empty -> .)
    KW_spec         shift and go to state 4
    KW_struct       shift and go to state 5
    KW_module       shift and go to state 6
    KW_parameter    shift and go to state 7

    caliper_declarations           shift and go to state 1
    empty                          shift and go to state 2
    caliper_declaration            shift and go to state 3

state 1

    (0) S' -> caliper_declarations .



state 2

    (132) caliper_declarations -> empty .

    $end            reduce using rule 132 (caliper_declarations -> empty .)


state 3

    (133) caliper_declarations -> caliper_declaration . caliper_declarations
    (132) caliper_declarations -> . empty
    (133) caliper_declarations -> . caliper_declaration caliper_declarations
    (1) empty -> .
    (128) caliper_declaration -> . KW_spec identifier ParenL expr_list ParenR Semi caliper_statement_list KW_endspec
    (129) caliper_declaration -> . KW_struct identifier ParenL expr_list ParenR Semi caliper_statement_list KW_endstruct
    (130) caliper_declaration -> . KW_module identifier ParenL expr_list ParenR Semi caliper_mod_stmt_list KW_endmodule
    (131) caliper_declaration -> . KW_parameter identifier Semi

    $end            reduce using rule 1 (empty -> .)
    KW_spec         shift and go to state 4
    KW_struct       shift and go to state 5
    KW_module       shift and go to state 6
    KW_parameter    shift and go to state 7

    caliper_declaration            shift and go to state 3
    caliper_declarations           shift and go to state 8
    empty                          shift and go to state 2

state 4

    (128) caliper_declaration -> KW_spec . identifier ParenL expr_list ParenR Semi caliper_statement_list KW_endspec
    (91) identifier -> . Ident

    Ident           shift and go to state 10

    identifier                     shift and go to state 9

state 5

    (129) caliper_declaration -> KW_struct . identifier ParenL expr_list ParenR Semi caliper_statement_list KW_endstruct
    (91) identifier -> . Ident

    Ident           shift and go to state 10

    identifier                     shift and go to state 11

state 6

    (130) caliper_declaration -> KW_module . identifier ParenL expr_list ParenR Semi caliper_mod_stmt_list KW_endmodule
    (91) identifier -> . Ident

    Ident           shift and go to state 10

    identifier                     shift and go to state 12

state 7

    (131) caliper_declaration -> KW_parameter . identifier Semi
    (91) identifier -> . Ident

    Ident           shift and go to state 10

    identifier                     shift and go to state 13

state 8

    (133) caliper_declarations -> caliper_declaration caliper_declarations .

    $end            reduce using rule 133 (caliper_declarations -> caliper_declaration caliper_declarations .)


state 9

    (128) caliper_declaration -> KW_spec identifier . ParenL expr_list ParenR Semi caliper_statement_list KW_endspec

    ParenL          shift and go to state 14


state 10

    (91) identifier -> Ident .

    ParenL          reduce using rule 91 (identifier -> Ident .)
    Semi            reduce using rule 91 (identifier -> Ident .)
    Dot             reduce using rule 91 (identifier -> Ident .)
    BracketL        reduce using rule 91 (identifier -> Ident .)
    Star            reduce using rule 91 (identifier -> Ident .)
    Divide          reduce using rule 91 (identifier -> Ident .)
    Mod             reduce using rule 91 (identifier -> Ident .)
    Plus            reduce using rule 91 (identifier -> Ident .)
    Minus           reduce using rule 91 (identifier -> Ident .)
    GreaterThan     reduce using rule 91 (identifier -> Ident .)
    LessThan        reduce using rule 91 (identifier -> Ident .)
    Question        reduce using rule 91 (identifier -> Ident .)
    Bar             reduce using rule 91 (identifier -> Ident .)
    Carat           reduce using rule 91 (identifier -> Ident .)
    Amp             reduce using rule 91 (identifier -> Ident .)
    Tilde           reduce using rule 91 (identifier -> Ident .)
    Equals          reduce using rule 91 (identifier -> Ident .)
    Not             reduce using rule 91 (identifier -> Ident .)
    Comma           reduce using rule 91 (identifier -> Ident .)
    ParenR          reduce using rule 91 (identifier -> Ident .)
    Colon           reduce using rule 91 (identifier -> Ident .)
    BracketR        reduce using rule 91 (identifier -> Ident .)
    KW_this         reduce using rule 91 (identifier -> Ident .)
    Ident           reduce using rule 91 (identifier -> Ident .)


state 11

    (129) caliper_declaration -> KW_struct identifier . ParenL expr_list ParenR Semi caliper_statement_list KW_endstruct

    ParenL          shift and go to state 15


state 12

    (130) caliper_declaration -> KW_module identifier . ParenL expr_list ParenR Semi caliper_mod_stmt_list KW_endmodule

    ParenL          shift and go to state 16


state 13

    (131) caliper_declaration -> KW_parameter identifier . Semi

    Semi            shift and go to state 17


state 14

    (128) caliper_declaration -> KW_spec identifier ParenL . expr_list ParenR Semi caliper_statement_list KW_endspec
    (4) expr_list -> . empty
    (5) expr_list -> . expr_list_p
    (1) empty -> .
    (2) expr_list_p -> . expression
    (3) expr_list_p -> . expression Comma expr_list_p
    (39) expression -> . expression1
    (40) expression1 -> . expression2
    (41) expression1 -> . expression2 LogicalImplication expression1
    (42) expression1 -> . expression2 LogicalEquivalence expression1
    (43) expression2 -> . expression3
    (44) expression2 -> . expression3 Question expression Colon expression2
    (45) expression3 -> . expression4
    (46) expression3 -> . expression3 LogicalOr expression4
    (47) expression3 -> . expression3 LogicalAnd expression4
    (48) expression3 -> . expression3 Bar expression4
    (49) expression3 -> . expression3 Carat expression4
    (50) expression3 -> . expression3 BinaryXnor expression4
    (51) expression3 -> . expression3 Amp expression4
    (52) expression3 -> . expression3 Equality expression4
    (53) expression3 -> . expression3 Inequality expression4
    (54) expression3 -> . expression3 CaseEquality expression4
    (55) expression3 -> . expression3 CaseInequality expression4
    (56) expression3 -> . expression3 WildcardEquality expression4
    (57) expression3 -> . expression3 WildcardInequality expression4
    (58) expression4 -> . expression5
    (59) expression4 -> . expression4 LessThan expression5
    (60) expression4 -> . expression4 LessThanEqual expression5
    (61) expression4 -> . expression4 GreaterThan expression5
    (62) expression4 -> . expression4 GreaterThanEqual expression5
    (63) expression5 -> . expression6
    (64) expression5 -> . expression5 LogicalShiftRight expression6
    (65) expression5 -> . expression5 LogicalShiftLeft expression6
    (66) expression5 -> . expression5 ArithmeticShiftRight expression6
    (67) expression5 -> . expression5 ArithmeticShiftLeft expression6
    (68) expression6 -> . expression7
    (69) expression6 -> . expression6 Plus expression7
    (70) expression6 -> . expression6 Minus expression7
    (71) expression7 -> . expression8
    (72) expression7 -> . expression7 Star expression8
    (73) expression7 -> . expression7 Divide expression8
    (74) expression7 -> . expression7 Mod expression8
    (75) expression7 -> . expression7 Power expression8
    (76) expression8 -> . primary
    (77) expression8 -> . Plus primary
    (78) expression8 -> . Minus primary
    (79) expression8 -> . Amp primary
    (80) expression8 -> . BinaryNand primary
    (81) expression8 -> . Bar primary
    (82) expression8 -> . BinaryNor primary
    (83) expression8 -> . Carat primary
    (84) expression8 -> . BinaryXnor primary
    (85) expression8 -> . Not primary
    (86) expression8 -> . Tilde primary
    (98) primary -> . number
    (99) primary -> . primary1
    (100) primary -> . function_call
    (101) primary -> . ParenL expression ParenR
    (29) BinaryNand -> . Tilde Amp
    (30) BinaryNand -> . Amp Tilde
    (31) BinaryNor -> . Tilde Bar
    (32) BinaryNor -> . Bar Tilde
    (27) BinaryXnor -> . Tilde Carat
    (28) BinaryXnor -> . Carat Tilde
    (90) number -> . Num
    (92) primary1 -> . identifier
    (93) primary1 -> . KW_this
    (94) primary1 -> . primary1 Dot identifier
    (95) primary1 -> . primary1 BracketL expression BracketR
    (96) primary1 -> . primary1 BracketL part_select_range BracketR
    (97) function_call -> . identifier ParenL expr_list ParenR
    (91) identifier -> . Ident

    ParenR          reduce using rule 1 (empty -> .)
    Plus            shift and go to state 35
    Minus           shift and go to state 36
    Amp             shift and go to state 31
    Bar             shift and go to state 28
    Carat           shift and go to state 29
    Not             shift and go to state 41
    Tilde           shift and go to state 42
    ParenL          shift and go to state 19
    Num             shift and go to state 46
    KW_this         shift and go to state 47
    Ident           shift and go to state 10

    identifier                     shift and go to state 18
    expr_list                      shift and go to state 20
    empty                          shift and go to state 21
    expr_list_p                    shift and go to state 22
    expression                     shift and go to state 23
    expression1                    shift and go to state 24
    expression2                    shift and go to state 25
    expression3                    shift and go to state 26
    expression4                    shift and go to state 27
    BinaryXnor                     shift and go to state 30
    expression5                    shift and go to state 32
    expression6                    shift and go to state 33
    expression7                    shift and go to state 34
    expression8                    shift and go to state 37
    primary                        shift and go to state 38
    BinaryNand                     shift and go to state 39
    BinaryNor                      shift and go to state 40
    number                         shift and go to state 43
    primary1                       shift and go to state 44
    function_call                  shift and go to state 45

state 15

    (129) caliper_declaration -> KW_struct identifier ParenL . expr_list ParenR Semi caliper_statement_list KW_endstruct
    (4) expr_list -> . empty
    (5) expr_list -> . expr_list_p
    (1) empty -> .
    (2) expr_list_p -> . expression
    (3) expr_list_p -> . expression Comma expr_list_p
    (39) expression -> . expression1
    (40) expression1 -> . expression2
    (41) expression1 -> . expression2 LogicalImplication expression1
    (42) expression1 -> . expression2 LogicalEquivalence expression1
    (43) expression2 -> . expression3
    (44) expression2 -> . expression3 Question expression Colon expression2
    (45) expression3 -> . expression4
    (46) expression3 -> . expression3 LogicalOr expression4
    (47) expression3 -> . expression3 LogicalAnd expression4
    (48) expression3 -> . expression3 Bar expression4
    (49) expression3 -> . expression3 Carat expression4
    (50) expression3 -> . expression3 BinaryXnor expression4
    (51) expression3 -> . expression3 Amp expression4
    (52) expression3 -> . expression3 Equality expression4
    (53) expression3 -> . expression3 Inequality expression4
    (54) expression3 -> . expression3 CaseEquality expression4
    (55) expression3 -> . expression3 CaseInequality expression4
    (56) expression3 -> . expression3 WildcardEquality expression4
    (57) expression3 -> . expression3 WildcardInequality expression4
    (58) expression4 -> . expression5
    (59) expression4 -> . expression4 LessThan expression5
    (60) expression4 -> . expression4 LessThanEqual expression5
    (61) expression4 -> . expression4 GreaterThan expression5
    (62) expression4 -> . expression4 GreaterThanEqual expression5
    (63) expression5 -> . expression6
    (64) expression5 -> . expression5 LogicalShiftRight expression6
    (65) expression5 -> . expression5 LogicalShiftLeft expression6
    (66) expression5 -> . expression5 ArithmeticShiftRight expression6
    (67) expression5 -> . expression5 ArithmeticShiftLeft expression6
    (68) expression6 -> . expression7
    (69) expression6 -> . expression6 Plus expression7
    (70) expression6 -> . expression6 Minus expression7
    (71) expression7 -> . expression8
    (72) expression7 -> . expression7 Star expression8
    (73) expression7 -> . expression7 Divide expression8
    (74) expression7 -> . expression7 Mod expression8
    (75) expression7 -> . expression7 Power expression8
    (76) expression8 -> . primary
    (77) expression8 -> . Plus primary
    (78) expression8 -> . Minus primary
    (79) expression8 -> . Amp primary
    (80) expression8 -> . BinaryNand primary
    (81) expression8 -> . Bar primary
    (82) expression8 -> . BinaryNor primary
    (83) expression8 -> . Carat primary
    (84) expression8 -> . BinaryXnor primary
    (85) expression8 -> . Not primary
    (86) expression8 -> . Tilde primary
    (98) primary -> . number
    (99) primary -> . primary1
    (100) primary -> . function_call
    (101) primary -> . ParenL expression ParenR
    (29) BinaryNand -> . Tilde Amp
    (30) BinaryNand -> . Amp Tilde
    (31) BinaryNor -> . Tilde Bar
    (32) BinaryNor -> . Bar Tilde
    (27) BinaryXnor -> . Tilde Carat
    (28) BinaryXnor -> . Carat Tilde
    (90) number -> . Num
    (92) primary1 -> . identifier
    (93) primary1 -> . KW_this
    (94) primary1 -> . primary1 Dot identifier
    (95) primary1 -> . primary1 BracketL expression BracketR
    (96) primary1 -> . primary1 BracketL part_select_range BracketR
    (97) function_call -> . identifier ParenL expr_list ParenR
    (91) identifier -> . Ident

    ParenR          reduce using rule 1 (empty -> .)
    Plus            shift and go to state 35
    Minus           shift and go to state 36
    Amp             shift and go to state 31
    Bar             shift and go to state 28
    Carat           shift and go to state 29
    Not             shift and go to state 41
    Tilde           shift and go to state 42
    ParenL          shift and go to state 19
    Num             shift and go to state 46
    KW_this         shift and go to state 47
    Ident           shift and go to state 10

    identifier                     shift and go to state 18
    expr_list                      shift and go to state 48
    empty                          shift and go to state 21
    expr_list_p                    shift and go to state 22
    expression                     shift and go to state 23
    expression1                    shift and go to state 24
    expression2                    shift and go to state 25
    expression3                    shift and go to state 26
    expression4                    shift and go to state 27
    BinaryXnor                     shift and go to state 30
    expression5                    shift and go to state 32
    expression6                    shift and go to state 33
    expression7                    shift and go to state 34
    expression8                    shift and go to state 37
    primary                        shift and go to state 38
    BinaryNand                     shift and go to state 39
    BinaryNor                      shift and go to state 40
    number                         shift and go to state 43
    primary1                       shift and go to state 44
    function_call                  shift and go to state 45

state 16

    (130) caliper_declaration -> KW_module identifier ParenL . expr_list ParenR Semi caliper_mod_stmt_list KW_endmodule
    (4) expr_list -> . empty
    (5) expr_list -> . expr_list_p
    (1) empty -> .
    (2) expr_list_p -> . expression
    (3) expr_list_p -> . expression Comma expr_list_p
    (39) expression -> . expression1
    (40) expression1 -> . expression2
    (41) expression1 -> . expression2 LogicalImplication expression1
    (42) expression1 -> . expression2 LogicalEquivalence expression1
    (43) expression2 -> . expression3
    (44) expression2 -> . expression3 Question expression Colon expression2
    (45) expression3 -> . expression4
    (46) expression3 -> . expression3 LogicalOr expression4
    (47) expression3 -> . expression3 LogicalAnd expression4
    (48) expression3 -> . expression3 Bar expression4
    (49) expression3 -> . expression3 Carat expression4
    (50) expression3 -> . expression3 BinaryXnor expression4
    (51) expression3 -> . expression3 Amp expression4
    (52) expression3 -> . expression3 Equality expression4
    (53) expression3 -> . expression3 Inequality expression4
    (54) expression3 -> . expression3 CaseEquality expression4
    (55) expression3 -> . expression3 CaseInequality expression4
    (56) expression3 -> . expression3 WildcardEquality expression4
    (57) expression3 -> . expression3 WildcardInequality expression4
    (58) expression4 -> . expression5
    (59) expression4 -> . expression4 LessThan expression5
    (60) expression4 -> . expression4 LessThanEqual expression5
    (61) expression4 -> . expression4 GreaterThan expression5
    (62) expression4 -> . expression4 GreaterThanEqual expression5
    (63) expression5 -> . expression6
    (64) expression5 -> . expression5 LogicalShiftRight expression6
    (65) expression5 -> . expression5 LogicalShiftLeft expression6
    (66) expression5 -> . expression5 ArithmeticShiftRight expression6
    (67) expression5 -> . expression5 ArithmeticShiftLeft expression6
    (68) expression6 -> . expression7
    (69) expression6 -> . expression6 Plus expression7
    (70) expression6 -> . expression6 Minus expression7
    (71) expression7 -> . expression8
    (72) expression7 -> . expression7 Star expression8
    (73) expression7 -> . expression7 Divide expression8
    (74) expression7 -> . expression7 Mod expression8
    (75) expression7 -> . expression7 Power expression8
    (76) expression8 -> . primary
    (77) expression8 -> . Plus primary
    (78) expression8 -> . Minus primary
    (79) expression8 -> . Amp primary
    (80) expression8 -> . BinaryNand primary
    (81) expression8 -> . Bar primary
    (82) expression8 -> . BinaryNor primary
    (83) expression8 -> . Carat primary
    (84) expression8 -> . BinaryXnor primary
    (85) expression8 -> . Not primary
    (86) expression8 -> . Tilde primary
    (98) primary -> . number
    (99) primary -> . primary1
    (100) primary -> . function_call
    (101) primary -> . ParenL expression ParenR
    (29) BinaryNand -> . Tilde Amp
    (30) BinaryNand -> . Amp Tilde
    (31) BinaryNor -> . Tilde Bar
    (32) BinaryNor -> . Bar Tilde
    (27) BinaryXnor -> . Tilde Carat
    (28) BinaryXnor -> . Carat Tilde
    (90) number -> . Num
    (92) primary1 -> . identifier
    (93) primary1 -> . KW_this
    (94) primary1 -> . primary1 Dot identifier
    (95) primary1 -> . primary1 BracketL expression BracketR
    (96) primary1 -> . primary1 BracketL part_select_range BracketR
    (97) function_call -> . identifier ParenL expr_list ParenR
    (91) identifier -> . Ident

    ParenR          reduce using rule 1 (empty -> .)
    Plus            shift and go to state 35
    Minus           shift and go to state 36
    Amp             shift and go to state 31
    Bar             shift and go to state 28
    Carat           shift and go to state 29
    Not             shift and go to state 41
    Tilde           shift and go to state 42
    ParenL          shift and go to state 19
    Num             shift and go to state 46
    KW_this         shift and go to state 47
    Ident           shift and go to state 10

    identifier                     shift and go to state 18
    expr_list                      shift and go to state 49
    empty                          shift and go to state 21
    expr_list_p                    shift and go to state 22
    expression                     shift and go to state 23
    expression1                    shift and go to state 24
    expression2                    shift and go to state 25
    expression3                    shift and go to state 26
    expression4                    shift and go to state 27
    BinaryXnor                     shift and go to state 30
    expression5                    shift and go to state 32
    expression6                    shift and go to state 33
    expression7                    shift and go to state 34
    expression8                    shift and go to state 37
    primary                        shift and go to state 38
    BinaryNand                     shift and go to state 39
    BinaryNor                      shift and go to state 40
    number                         shift and go to state 43
    primary1                       shift and go to state 44
    function_call                  shift and go to state 45

state 17

    (131) caliper_declaration -> KW_parameter identifier Semi .

    KW_spec         reduce using rule 131 (caliper_declaration -> KW_parameter identifier Semi .)
    KW_struct       reduce using rule 131 (caliper_declaration -> KW_parameter identifier Semi .)
    KW_module       reduce using rule 131 (caliper_declaration -> KW_parameter identifier Semi .)
    KW_parameter    reduce using rule 131 (caliper_declaration -> KW_parameter identifier Semi .)
    $end            reduce using rule 131 (caliper_declaration -> KW_parameter identifier Semi .)


state 18

    (92) primary1 -> identifier .
    (97) function_call -> identifier . ParenL expr_list ParenR

    Dot             reduce using rule 92 (primary1 -> identifier .)
    BracketL        reduce using rule 92 (primary1 -> identifier .)
    Star            reduce using rule 92 (primary1 -> identifier .)
    Divide          reduce using rule 92 (primary1 -> identifier .)
    Mod             reduce using rule 92 (primary1 -> identifier .)
    Plus            reduce using rule 92 (primary1 -> identifier .)
    Minus           reduce using rule 92 (primary1 -> identifier .)
    GreaterThan     reduce using rule 92 (primary1 -> identifier .)
    LessThan        reduce using rule 92 (primary1 -> identifier .)
    Question        reduce using rule 92 (primary1 -> identifier .)
    Bar             reduce using rule 92 (primary1 -> identifier .)
    Carat           reduce using rule 92 (primary1 -> identifier .)
    Amp             reduce using rule 92 (primary1 -> identifier .)
    Tilde           reduce using rule 92 (primary1 -> identifier .)
    Equals          reduce using rule 92 (primary1 -> identifier .)
    Not             reduce using rule 92 (primary1 -> identifier .)
    Comma           reduce using rule 92 (primary1 -> identifier .)
    ParenR          reduce using rule 92 (primary1 -> identifier .)
    Semi            reduce using rule 92 (primary1 -> identifier .)
    Colon           reduce using rule 92 (primary1 -> identifier .)
    BracketR        reduce using rule 92 (primary1 -> identifier .)
    ParenL          shift and go to state 50


state 19
